welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T= new Array[Color](getMondeHauteur())
for (i<-0 to (getMondeHauteur()-1)){
	T(i)=getCouleurSol()
}
for (j<-0 to (getMondeLarguerur()-1)){
	T(j)=T(j-1);
}
}
